# askc

./: .gitignore  CLAUDE.md  PLAN.md  README.md  package.json  pyproject.toml
src/: cli.ts  db.ts
src/askc/: __init__.py  __main__.py  app.py  cli.py  db.py  logs_app.py
src/backends/: claude.ts  index.ts  opencode.ts  pi.ts  types.ts
tests/: backends.test.ts  cli.test.ts  db.test.ts
