[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "askc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.18",
    "rich>=14.2.0",
    "textual>=6.11.0",
    "typer>=0.21.0",
]

[project.scripts]
askc = "askc:main"

[tool.hatch.build.targets.wheel]
packages = ["src/askc"]
